--- a/layout/index.html
+++ b/layout/index.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211190845">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221211190845">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221211190845">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211202951">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221211202951">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221211202951">
 
 
 </head>
@@ -136,116 +136,120 @@
 </header>
 		<main class="page">
 
-			<div class="anim-content" id="anim-content">
-				<section class="page__main main panel">
-					<div class="main__container">
-						<div class="main__body">
-							<h1 class="main__title title-xl">
-								Осуществляем комплексные поставки оборудования и&nbsp;материалов
-							</h1>
-							<a href="#products" data-goto class="main__btn btn btn-orange">
-								Подробнее
-							</a>
-						</div>
-					</div>
-					<canvas id="gradient-canvas" data-transition-in />
-				</section>
-				<div class="page__products products panel" id="products">
-					<div class="products__container">
-						<div class="products__items">
-							<figure class="products__item card card-1">
-								<picture><source srcset="img/products/01.webp"type="image/webp"><img src="img/products/01.png" alt="product desc"></picture>
-								<figcaption class="products__item-desc">
-									СИП-арматура <br>
-									собственного производства
-								</figcaption>
-								<a href="" class="products__item-link"></a>
-							</figure>
-							<figure class="products__item card card-2">
-								<picture><source srcset="img/products/02.webp"type="image/webp"><img src="img/products/02.png" alt="product desc"></picture>
-								<figcaption class="products__item-desc">
-									Комплектация <br>
-									щитового оборудования
-								</figcaption>
-								<a href="" class="products__item-link"></a>
-							</figure>
-							<figure class="products__item card card-3">
-								<picture><source srcset="img/products/03.webp"type="image/webp"><img src="img/products/03.png" alt="product desc"></picture>
-								<figcaption class="products__item-desc">
-									Комплексные поставки <br>
-									гражданского строительства
-								</figcaption>
-								<a href="" class="products__item-link"></a>
-							</figure>
-							<figure class="products__item card card-4">
-								<picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" alt="product desc"></picture>
-								<figcaption class="products__item-desc">
-									Комплексные поставки <br>
-									для промышленности
-								</figcaption>
-								<a href="" class="products__item-link"></a>
-							</figure>
-						</div>
+			<section class="page__main main panel">
+				<div class="main__container">
+					<div class="main__body">
+						<h1 class="main__title title-xl">
+							Осуществляем комплексные поставки оборудования и&nbsp;материалов
+						</h1>
+						<a href="#products" data-goto class="main__btn btn btn-orange">
+							Подробнее
+						</a>
 					</div>
 				</div>
-				<div class="page__benefits benefits">
-					<div class="benefits__slide benefits__slide-1 anim-section">
-						<div class="benefits__slide-image">
-							<picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image benefits__slide-bg" alt="benefits image"></picture>
-						</div>
-						<div class="benefits__slide-num">
-							01
-						</div>
-						<div class="benefits__slide-text">
-							Постоянное развитие умений <br>
-							и навыков сотрудников
-						</div>
-					</div>
-					<div class="benefits__slide benefits__slide-2 anim-section">
-						<div class="benefits__slide-image">
-							<picture><source srcset="img/benefits/02.webp"type="image/webp"><img src="img/benefits/02.jpg" class="cover-image benefits__slide-bg" alt="benefits image"></picture>
-						</div>
-						<div class="benefits__slide-num">
-							02
-						</div>
-						<div class="benefits__slide-text">
-							Гарантируем внимание <br>
-							к партнерам и заботу об их бизнесе
-						</div>
-					</div>
-					<div class="benefits__slide benefits__slide-3 anim-section">
-						<div class="benefits__slide-image">
-							<picture><source srcset="img/benefits/03.webp"type="image/webp"><img src="img/benefits/03.jpg" class="cover-image benefits__slide-bg" alt="benefits image"></picture>
-						</div>
-						<div class="benefits__slide-num">
-							03
-						</div>
-						<div class="benefits__slide-text">
-							Отвечаем не только за качество <br>
-							поставляемой и производимой продукции, <br>
-							но и за уровень обслуживания
-						</div>
+				<canvas id="gradient-canvas" data-transition-in />
+			</section>
+			<div class="page__products products panel" id="products">
+				<div class="products__container">
+					<div class="products__items">
+						<figure class="products__item card card-1">
+							<picture><source srcset="img/products/01.webp"type="image/webp"><img src="img/products/01.png" alt="product desc"></picture>
+							<figcaption class="products__item-desc">
+								СИП-арматура <br>
+								собственного производства
+							</figcaption>
+							<a href="" class="products__item-link"></a>
+						</figure>
+						<figure class="products__item card card-2">
+							<picture><source srcset="img/products/02.webp"type="image/webp"><img src="img/products/02.png" alt="product desc"></picture>
+							<figcaption class="products__item-desc">
+								Комплектация <br>
+								щитового оборудования
+							</figcaption>
+							<a href="" class="products__item-link"></a>
+						</figure>
+						<figure class="products__item card card-3">
+							<picture><source srcset="img/products/03.webp"type="image/webp"><img src="img/products/03.png" alt="product desc"></picture>
+							<figcaption class="products__item-desc">
+								Комплексные поставки <br>
+								гражданского строительства
+							</figcaption>
+							<a href="" class="products__item-link"></a>
+						</figure>
+						<figure class="products__item card card-4">
+							<picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" alt="product desc"></picture>
+							<figcaption class="products__item-desc">
+								Комплексные поставки <br>
+								для промышленности
+							</figcaption>
+							<a href="" class="products__item-link"></a>
+						</figure>
 					</div>
 				</div>
-				<section class="page__video video">
-					<div class="video__container">
-						<div class="video__body">
-							<div class="video__main">
-								<h2 class="video__title title-xl">
-									Видео о нас
-								</h2>
-								<div class="video__desc">
-									Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
-								</div>
-							</div>
-							<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY"
-								data-video-code-eng="m_Dr1wyVwGI" class="video__link icon-play">
-								<picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image" alt="video image"></picture>
-							</button>
-						</div>
-					</div>
-				</section>
 			</div>
+			<div class="page__benefits benefits">
+				<div class="swiper-container benefits__slider">
+			
+					<div class="swiper-wrapper benefits__wrapper">
+			
+						<div class="swiper-slide benefits__slide">
+							<div class="benefits__slide-image">
+								<picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image" alt="benefits image"></picture>
+							</div>
+							<div class="benefits__slide-num">
+								01
+							</div>
+							<div class="benefits__slide-text">
+								Постоянное развитие умений <br>
+								и навыков сотрудников
+							</div>
+						</div>
+						<div class="swiper-slide benefits__slide">
+							<div class="benefits__slide-image">
+								<picture><source srcset="img/benefits/02.webp"type="image/webp"><img src="img/benefits/02.jpg" class="cover-image" alt="benefits image"></picture>
+							</div>
+							<div class="benefits__slide-num">
+								02
+							</div>
+							<div class="benefits__slide-text">
+								Гарантируем внимание <br>
+								к партнерам и заботу об их бизнесе
+							</div>
+						</div>
+						<div class="swiper-slide benefits__slide">
+							<div class="benefits__slide-image">
+								<picture><source srcset="img/benefits/03.webp"type="image/webp"><img src="img/benefits/03.jpg" class="cover-image" alt="benefits image"></picture>
+							</div>
+							<div class="benefits__slide-num">
+								03
+							</div>
+							<div class="benefits__slide-text">
+								Отвечаем не только за качество <br>
+								поставляемой и производимой продукции, <br>
+								но и за уровень обслуживания
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<section class="page__video video">
+				<div class="video__container">
+					<div class="video__body">
+						<div class="video__main">
+							<h2 class="video__title title-xl">
+								Видео о нас
+							</h2>
+							<div class="video__desc">
+								Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
+							</div>
+						</div>
+						<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY"
+							data-video-code-eng="m_Dr1wyVwGI" class="video__link icon-play">
+							<picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image" alt="video image"></picture>
+						</button>
+					</div>
+				</div>
+			</section>
 			<section class="page__projects projects">
 				<div class="projects__container">
 					<div class="projects__header" data-animation>
@@ -714,17 +718,16 @@
         </div>
     </div>
 </div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211190845"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211190845"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211202951"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211202951"></script>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211190845"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211190845"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211190845"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211190845"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211190845"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211190845"></script>
-<script src="js/app.min.js?_v=20221211190845"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211202951"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211202951"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211202951"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211202951"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211202951"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211202951"></script>
+<script src="js/app.min.js?_v=20221211202951"></script>
 
 
 
