--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -1,4 +1,4 @@
-<section id="lottie" class="page__main main">
+<section class="page__main main panel">
                 <div class="main__container">
                     <div class="main__body">
                         <h1 class="main__title title-xl">
@@ -9,98 +9,95 @@
                         </a>
                     </div>
                 </div>
-                <canvas id="gradient-canvas" data-transition-in></canvas>
+                <canvas id="gradient-canvas" data-transition-in />
             </section>
-            <div class="anim-content" id="anim-content" >
-                <div class="page__products products">
-                    <div class="products__container">
-                        <div class="products__items">
-                            <figure class="products__item card-1">
-                                <picture><source srcset="img/products/01.webp"type="image/webp"><img src="img/products/01.png" alt="product desc"></picture>
-                                <figcaption class="products__item-desc">
-                                    СИП-арматура <br>
-                                    собственного производства
-                                </figcaption>
-                                <a href="" class="products__item-link"></a>
-                            </figure>
-                            <figure class="products__item card-2">
-                                <picture><source srcset="img/products/02.webp"type="image/webp"><img src="img/products/02.png" alt="product desc"></picture>
-                                <figcaption class="products__item-desc">
-                                    Комплектация <br>
-                                    щитового оборудования
-                                </figcaption>
-                                <a href="" class="products__item-link"></a>
-                            </figure>
-                            <figure class="products__item card-3">
-                                <picture><source srcset="img/products/03.webp"type="image/webp"><img src="img/products/03.png" alt="product desc"></picture>
-                                <figcaption class="products__item-desc">
-                                    Комплексные поставки <br>
-                                    гражданского строительства
-                                </figcaption>
-                                <a href="" class="products__item-link"></a>
-                            </figure>
-                            <figure class="products__item card-4">
-                                <picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" alt="product desc"></picture>
-                                <figcaption class="products__item-desc">
-                                    Комплексные поставки <br>
-                                    для промышленности
-                                </figcaption>
-                                <a href="" class="products__item-link"></a>
-                            </figure>
-                        </div>
+            <div class="page__products products panel" id="products">
+                <div class="products__container">
+                    <div class="products__items">
+                        <figure class="products__item card card-1">
+                            <picture><source srcset="img/products/01.webp"type="image/webp"><img src="img/products/01.png" alt="product desc"></picture>
+                            <figcaption class="products__item-desc">
+                                СИП-арматура <br>
+                                собственного производства
+                            </figcaption>
+                            <a href="" class="products__item-link"></a>
+                        </figure>
+                        <figure class="products__item card card-2">
+                            <picture><source srcset="img/products/02.webp"type="image/webp"><img src="img/products/02.png" alt="product desc"></picture>
+                            <figcaption class="products__item-desc">
+                                Комплектация <br>
+                                щитового оборудования
+                            </figcaption>
+                            <a href="" class="products__item-link"></a>
+                        </figure>
+                        <figure class="products__item card card-3">
+                            <picture><source srcset="img/products/03.webp"type="image/webp"><img src="img/products/03.png" alt="product desc"></picture>
+                            <figcaption class="products__item-desc">
+                                Комплексные поставки <br>
+                                гражданского строительства
+                            </figcaption>
+                            <a href="" class="products__item-link"></a>
+                        </figure>
+                        <figure class="products__item card card-4">
+                            <picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" alt="product desc"></picture>
+                            <figcaption class="products__item-desc">
+                                Комплексные поставки <br>
+                                для промышленности
+                            </figcaption>
+                            <a href="" class="products__item-link"></a>
+                        </figure>
                     </div>
                 </div>
-                <div class="page__benefits benefits">
-                    <div class="swiper-container benefits-slider">
-
-                        <div class="swiper-wrapper benefits-slider__wrapper">
-
-                            <div class="swiper-slide benefits-slider__slide">
-                                <div class="benefits-slider__slide-image">
-                                    <picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image" alt="benefits image"></picture>
-                                </div>
-                                <div class="benefits-slider__slide-num">
-                                    01
-                                </div>
-                                <div class="benefits-slider__slide-text">
-                                    Постоянное развитие умений <br>
-                                    и навыков сотрудников
-                                </div>
-                            </div>
-                            <div class="swiper-slide benefits-slider__slide">
-                                <div class="benefits-slider__slide-image">
-                                    <picture><source srcset="img/benefits/02.webp"type="image/webp"><img src="img/benefits/02.jpg" class="cover-image" alt="benefits image"></picture>
-                                </div>
-                                <div class="benefits-slider__slide-num">
-                                    02
-                                </div>
-                                <div class="benefits-slider__slide-text">
-                                    Гарантируем внимание <br>
-                                    к партнерам и заботу об их бизнесе
-                                </div>
-                            </div>
-                            <div class="swiper-slide benefits-slider__slide">
-                                <div class="benefits-slider__slide-image">
-                                    <picture><source srcset="img/benefits/03.webp"type="image/webp"><img src="img/benefits/03.jpg" class="cover-image" alt="benefits image"></picture>
-                                </div>
-                                <div class="benefits-slider__slide-num">
-                                    03
-                                </div>
-                                <div class="benefits-slider__slide-text">
-                                    Отвечаем не только за качество <br>
-                                    поставляемой и производимой продукции, <br>
-                                    но и за уровень обслуживания
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                {{VIDEO}}
             </div>
+            <div class="page__benefits benefits">
+                <div class="swiper-container benefits__slider">
+            
+                    <div class="swiper-wrapper benefits__wrapper">
+            
+                        <div class="swiper-slide benefits__slide">
+                            <div class="benefits__slide-image">
+                                <picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image" alt="benefits image"></picture>
+                            </div>
+                            <div class="benefits__slide-num">
+                                01
+                            </div>
+                            <div class="benefits__slide-text">
+                                Постоянное развитие умений <br>
+                                и навыков сотрудников
+                            </div>
+                        </div>
+                        <div class="swiper-slide benefits__slide">
+                            <div class="benefits__slide-image">
+                                <picture><source srcset="img/benefits/02.webp"type="image/webp"><img src="img/benefits/02.jpg" class="cover-image" alt="benefits image"></picture>
+                            </div>
+                            <div class="benefits__slide-num">
+                                02
+                            </div>
+                            <div class="benefits__slide-text">
+                                Гарантируем внимание <br>
+                                к партнерам и заботу об их бизнесе
+                            </div>
+                        </div>
+                        <div class="swiper-slide benefits__slide">
+                            <div class="benefits__slide-image">
+                                <picture><source srcset="img/benefits/03.webp"type="image/webp"><img src="img/benefits/03.jpg" class="cover-image" alt="benefits image"></picture>
+                            </div>
+                            <div class="benefits__slide-num">
+                                03
+                            </div>
+                            <div class="benefits__slide-text">
+                                Отвечаем не только за качество <br>
+                                поставляемой и производимой продукции, <br>
+                                но и за уровень обслуживания
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {{VIDEO}}
             {{PROJECTS}}
             {{ARTICLES}}
             {{STAFF}}
-            
             <div class="page__companies companies" data-animation>
                 <div class="companies__container">
                     <div class="companies__columns">
