--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -144,6 +144,7 @@ body._pc .anim-content .products.active .products__items {
 }
 
 body._pc .anim-content .products.active .products__item {
+  min-height: 50vh;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -159,6 +160,7 @@ body._pc .anim-content .projects {
 
 body._pc .anim-section {
   width: 100%;
+  min-height: 100vh !important;
 }
 
 .wrapper {
@@ -2602,6 +2604,10 @@ body._pc .anim-section {
   background: currentColor;
 }
 
+.article__content table td strong {
+  font-weight: 500;
+}
+
 .article__content table th {
   background: #f2f2f2;
   text-align: left;
@@ -3969,7 +3975,7 @@ body._pc .anim-section {
   }
 
   .benefits__slide {
-    min-height: 100%;
+    min-height: 640px;
   }
 
   .benefits__slide-num {
