--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -11,44 +11,7 @@
                 </div>
                 <canvas id="gradient-canvas" data-transition-in />
             </section>
-            <div class="page__products products panel" id="products">
-                <div class="products__container">
-                    <div class="products__items">
-                        <figure class="products__item card card-1">
-                            <picture><source srcset="img/products/01.webp"type="image/webp"><img src="img/products/01.png" alt="product desc"></picture>
-                            <figcaption class="products__item-desc">
-                                СИП-арматура <br>
-                                собственного производства
-                            </figcaption>
-                            <a href="" class="products__item-link"></a>
-                        </figure>
-                        <figure class="products__item card card-2">
-                            <picture><source srcset="img/products/02.webp"type="image/webp"><img src="img/products/02.png" alt="product desc"></picture>
-                            <figcaption class="products__item-desc">
-                                Комплектация <br>
-                                щитового оборудования
-                            </figcaption>
-                            <a href="" class="products__item-link"></a>
-                        </figure>
-                        <figure class="products__item card card-3">
-                            <picture><source srcset="img/products/03.webp"type="image/webp"><img src="img/products/03.png" alt="product desc"></picture>
-                            <figcaption class="products__item-desc">
-                                Комплексные поставки <br>
-                                гражданского строительства
-                            </figcaption>
-                            <a href="" class="products__item-link"></a>
-                        </figure>
-                        <figure class="products__item card card-4">
-                            <picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" alt="product desc"></picture>
-                            <figcaption class="products__item-desc">
-                                Комплексные поставки <br>
-                                для промышленности
-                            </figcaption>
-                            <a href="" class="products__item-link"></a>
-                        </figure>
-                    </div>
-                </div>
-            </div>
+            {{DIRECTIONS}}
             <div class="page__benefits benefits">
                 <div class="swiper-container benefits__slider">
             
